<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Enigma</string>
    <string name="Goal">What\'s next?</string>
    <string name="Go">Go!</string>
    <string name="list">My list</string>
    <string name="delete_all">Delete All</string>
    <string name="delete">Delete</string>
    <string name="title_activity_about">About</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Enigma V1.0</string>
    <string name="hello_world1">Your To Do list in your pocket</string>
     <string name="beta">This is the beta version, final will be out soon</string>
    <string name="hello_world2">Developed by : mohamedrashad@xda </string>
    <string name="hello_world3">If you like it share it :)</string>
    <string name="conact">Contact me : twitter.com/ParanoidR_</string>
    <string name="share">share</string>
    <string name="XDA">Official XDA Thread</string>
    <string name="INVAILD">opps !</string>
    <string name="ok">Got it</string>
    <string name="missing"> Enter something </string>
    

</resources>
