<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/TableLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" xmlns:android1="http://schemas.android.com/apk/res/android"
    android:stretchColumns="0,1,2">

    <TableRow
        android1:id="@+id/tableRow1"
        android1:layout_width="match_parent"
        android1:layout_height="wrap_content" >

        <EditText
            android1:id="@+id/editText"
            android1:layout_width="match_parent"
            android1:layout_height="wrap_content"
            android1:ems="12" 
            android:hint="@string/Goal"
            android:textColorHint="#C0C0C0"
            android1:textColor="#000000"
            >

            <requestFocus />
        </EditText>

        <Button
            android1:id="@+id/buttonEnter"
            android1:layout_width="match_parent"
            android1:layout_height="wrap_content"
            android1:text="@string/Go"
             />

    </TableRow>

    <TableRow
        android1:id="@+id/tableRow2"
        android1:layout_width="match_parent"
        android1:layout_height="wrap_content" 
        android:background="#C0C0C0">

        <TextView
            android1:id="@+id/textView1"
            android1:layout_width="match_parent"
            android1:layout_height="wrap_content"
            android1:layout_span="2"
            android1:gravity="center_horizontal"
            android1:padding="5dp"
            android1:text="@string/list"
            android1:textColor="#000000"
            android1:textSize="16sp" />

    </TableRow>


    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="#C0C0C0" >

        <ScrollView
            android:id="@+id/ScrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_span="2"
            android:padding="5dp" >

            <TableLayout
                android:id="@+id/TableView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp" 
                android:stretchColumns="yes" >
            </TableLayout>
        </ScrollView>

    </TableRow>
    

    <TableRow
        android1:id="@+id/tableRow4"
            android1:layout_width="match_parent"
            android1:layout_height="wrap_content" >

        <Button
            android1:id="@+id/buttondeleteall"
            android1:layout_width="match_parent"
            android1:layout_height="wrap_content"
            android1:text="@string/delete_all"
            android:layout_span="2"
            android:layout_weight="1"
            />

    </TableRow>

</TableLayout>